Home and Project started

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <body>
 <app-nav-menu></app-nav-menu>
-<main class="container">
-  <router-outlet></router-outlet>
-</main>
+
+  <router-outlet class="mt-auto"></router-outlet>
+
 <app-footer-bar></app-footer-bar>
 </body>
 
