--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,32 @@
-<p>
-  projects works!
-</p>
+<section class="portfolio-block projects-with-sidebar">
+  <div class="container">
+    <!-- Start: portfolio heading -->
+    <div class="heading">
+      <h2>Recent Work</h2>
+    </div><!-- End: portfolio heading -->
+    <div class="row">
+      <div class="col-md-3">
+        <ul class="list-unstyled sidebar">
+          <li><a class="active" href="#">All</a></li>
+          <li><a href="#">Bootstrap</a></li>
+          <li><a href="#">Clean</a></li>
+          <li><a href="#">Colors</a></li>
+          <li><a href="#">Portfolio</a></li>
+        </ul>
+      </div>
+      <div class="col-md-9">
+        <div class="row">
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="/404.html"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image1.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image2.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image3.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image4.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image5.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image6.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image7.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image8.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image9.jpg"></a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
