--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
-body {
-  padding-top: 5.5%;
+ body {
+    padding-top: 5.5%;
+  }
+
+
+ @media only screen and (min-width: 1700px) {
+  body {
+    padding-top: 4.2%;
+  }
 }
