--- a/src/app/footer-bar/footer-bar.component.html
+++ b/src/app/footer-bar/footer-bar.component.html
@@ -1,7 +1,8 @@
 <footer class="page-footer">
   <div class="container">
-    <div class="links"><a href="index.html">About me</a><a href="contact.html">Contact me</a><a
-      href="projects-compact-grid-1.html">Projects</a></div>
+    <div class="links"><a [routerLink]="['/']">About me</a>
+      <a [routerLink]="['/contact']">Contact me</a><a
+      [routerLink]="['/projects']" >Projects</a></div>
     <div class="social-icons"><a href="https://www.facebook.com/coolisnotschool"
                                  style="background-color: rgb(0,0,0);"><i class="icon ion-social-facebook"></i></a>
       <a href="https://www.instagram.com/aldrin.ronchi" style="background-color: rgb(0,0,0);">
