--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -10,13 +10,13 @@
           >
             <a class="nav-link" [routerLink]="['/']">Home</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
+          <li class="nav-item" >
             <a class="nav-link" [routerLink]="['/projects']"
             >Projects</a
             >
           </li>
-          <li class="nav-item"><a class="nav-link" href="/cv.html">CV</a></li>
-          <li class="nav-item"><a class="nav-link" href="/hire-me.html">Hire me</a></li>
+          <li class="nav-item"><a class="nav-link" [routerLink]="['/curriculum']">CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="mailto:work.aldrinronchi@gmail.com?subject=🤝%20Project%20info.%20Let's%20talk" >Contact</a></li>
         </ul>
       </div>
     </div>
