--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,6 @@
 <section class="portfolio-block projects-with-sidebar">
   <div class="container">
+
     <!-- Start: portfolio heading -->
     <div class="heading">
       <h2>Recent Work</h2>
@@ -7,29 +8,38 @@
     <div class="row">
       <div class="col-md-3">
         <ul class="list-unstyled sidebar">
-          <li><a class="active" href="#">All</a></li>
-          <li><a href="#">Bootstrap</a></li>
-          <li><a href="#">Clean</a></li>
-          <li><a href="#">Colors</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <p>Much text</p>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Launch demo modal
+          </button>
         </ul>
       </div>
       <div class="col-md-9">
         <div class="row">
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="/404.html"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image1.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image2.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image3.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image4.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image5.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image6.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image7.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image8.jpg"></a></div>
-          <div class="col-md-6 col-lg-4 project-sidebar-card"><a href="#"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image9.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(1)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image1.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(2)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image2.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(3)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image4.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(4)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image5.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(5)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image3.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(6)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image6.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(7)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image7.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(8)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image8.jpg"></a></div>
+          <div class="col-md-6 col-lg-4 project-sidebar-card"><a data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="changeModal(9)"><img class="img-fluid image scale-on-hover" src="/assets/img/nature/image9.jpg"></a></div>
         </div>
       </div>
     </div>
   </div>
 </section>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+
+      <app-modalinfo [item]="sector"></app-modalinfo>
+
+  </div>
+</div>
+<!--
+
 <section id="portfolio-details" class="portfolio-details">
   <div class="container">
 
@@ -78,3 +88,4 @@
 
   </div>
 </section>
+-->
