Utils and adjust on navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <body>
 <app-nav-menu></app-nav-menu>
+<div  style="padding-top: 3.6em;">
 
   <router-outlet class="mt-auto"></router-outlet>
-
+</div>
 <app-footer-bar></app-footer-bar>
 </body>
 
