--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(120deg, #8556cc, #03fcca);">
+  <nav class="navbar navbar-dark navbar-expand-lg bg-white portfolio-navbar gradient fixed-top" style="background: linear-gradient(120deg, #8556cc, #03fcca);">
     <div class="container"><a class="navbar-brand logo" href="#">Pholium</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
